Fix for light theme in opea, header not showing any color.

--- a/static/styles/light/style.css
+++ b/static/styles/light/style.css
@@ -139,7 +139,7 @@ ul.thin li { margin:0px 0px; padding:0px; }
     background-color: #0074b7;
     background: -moz-linear-gradient(top, #0074b7 0%, #2c5687 100%); /* firefox */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0074b7), color-stop(100%,#2c5687)); /* webkit */
-    background-image: -o-linear-gradient(top, rgb(255,255,255) 0%, rgb(233,233,233) 100%); /* opera */
+    background: -o-linear-gradient(top, rgb(255,255,255) 0%, rgb(233,233,233) 100%); /* opera */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0074b7', endColorstr='#2c5687' ); /* ie */
     
     font-weight: normal;
